# newsletter

./: '  .dockerignore  .env  .gitignore  Cargo.toml  Docker-Setup.md  Dockerfile  Makefile  README.md  configuration.yaml  docker-compose.yml  service.yml  sqlx-data.json
.github/: FUNDING.yml
.github/workflows/: build.yml  cd.yml  ci.yml  coverage.yml  format.yml  lint.yml  security.yml  security_audit.yml  tests.yml
.vim/: coc-settings.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230608065433_create_subscriptions_table.sql  20230718091507_create_subscriptions_table.sql  20230830095842_add_status_to_subscriptions.sql  20230830110019_make_status_not_null_in_subscriptions.sql  20230830111442_make_update_confirm_to_confirmed_subscriptions.sql  20230830111515_fix_update_confirm_to_confirmed_subscriptions.sql  20230830114102_create_subscription_tokens_table.sql  20230904121647_rename_column_name_of_subscription_token.sql  20231011111323_add_user_table.sql  20231012082730_rename_password_column.sql  20231015123531_add_salt_to_users.sql  20231015141925_remove_salt_column_from_users.sql  20231028181718_seed_user.sql  20231104131906_create_idempotancy_table.sql  20231105153451_make_response_value_optional.sql  20231109153020_add_newsletter_issue_table.sql  20231109160805_add_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_workers.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: clear.rs  key.rs  mod.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletter.rs  subscribe_confirm.html  subscribe_page.html  subscription_error.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: index.html  mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs  subscriptions.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
