[package]
name = "newsletter"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
actix-web = "4"
reqwest = "0.11"
serde = {version = "1", features = ["derive"]}
config = "0.11"
chrono = "0.4.26"
time = "0.2.23"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[dev-dependencies]
time = "0.2.23"