[package]
name = "newsletter"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = {version = "1", features = ["macros", "rt-multi-thread", "rt"]}
actix-web = "4"
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
config = "0.11"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
# registry implements the subscriber trait
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.5"
serde-aux = "3"
unicode-segmentation = "1"
claim = "0.5"
validator = "0.14"
fake = "2.4"
wiremock = "0.5"
rand = {version = "0.8", features = ["std_rng"]}
anyhow = "1.0.75"
thiserror = "1.0.49"
base64 = "0.21.4"
argon2 = {version = "0.5.2", features = ["std"]}
urlencoding = "2.1.3"
htmlescape = "0.3.1"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.8.0", features = ["redis-rs-tls-session"] }
uuid = { version = "1.5.0", features = ["v4", "serde", "fast-rng"] }
actix-web-lab = "0.20.0"
serde_urlencoded = "0.7.1"

[dev-dependencies]
linkify = "0.8"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

